# citevahti

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  epinet-references.bib  osv-scanner.toml  pyproject.toml  server.json
.claude/: launch.json
.claude-plugin/: plugin.json
.claude/skills/prescreen-benchmark/: SKILL.md
.claude/skills/secure-release/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  wrong_support_judgment.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  desktop-extension-build.yml  osv-scanner.yml  pip-audit.yml  publish-pypi.yml  scorecard.yml
desktop-extension/: .gitignore  BUILD.md  build-app.sh  build-binary.sh  build-python.sh  entitlements.plist  icon.icns  make-icon.py  manifest.binary.json  manifest.json  sign-notarize.sh  smoke_frozen_panel.py
desktop-extension/app/: pyi_app_entry.py  pyi_engine_entry.py
desktop-extension/server/: main.py  pyi_entry.py
docs/: AGENT.md  ARCHITECTURE.md  AUTO_UPDATE.md  BETA_TO_PRODUCTION.md  CHAT_AND_PANEL.md  CI.md  CLAIM_NORMALIZATION.md  CLI.md  CONTRIBUTOR_PRIVACY.md  DESIGN_SYSTEM.md  DIRECTORY_EXAMPLES.md  DISCLOSURE.md  EVALUATION.md  GLOSSARY.md  INTEGRATION.md  KEY_MANAGEMENT.md  KNOWN_LIMITATIONS.md  METHODS.md  PRIVACY.md  QUICKSTART.md  RECAP.md  RELEASE_NOTES_v0.1.0-integrity-spine.md  RELEASING.md  REPORTING.md  REVIEW_CHECKLIST.md  SAFETY_INVARIANTS.md  SBOM.md  STATUS.md  WRITING_GOOD_CLAIMS.md
docs/adr/: 0001-citation-integrity-architecture.md  0002-ui-delivery-and-review-layer.md  0003-hosted-layer-and-open-core.md  0004-brand-ip-and-entity.md  0005-zotero-auth-and-writeback.md  0006-full-rename-retire-zotsynth-alias.md  0007-local-web-app-and-http-surface.md  0008-evidence-confidence-tiers.md  0009-evaluation-and-model-quality.md  0010-godfile-decomposition.md  README.md
docs/demo/: build_demo_ledger.py  capture_screenshots.py  record_demo.py
docs/design/: review-layer.md  tokens.css  working-file-selection.md
docs/marketing/: launch-copy-v1.md
docs/workflows/: run-unit-tests-on-a-manuscript.md
frontend-tests/: README.md  a11y.test.mjs  components.test.mjs  dead-ends.test.mjs  errors.test.mjs  evidence-map.test.mjs  harness.mjs  package-lock.json  package.json  playwright.config.mjs  reconnect.test.mjs  units.test.mjs  update-nudge.test.mjs
frontend-tests/e2e/: a11y.spec.mjs  flow.spec.mjs  serve.mjs
mockups/citevahti-evidence-figure/: README.md  data.js  figure.css  figure.js  index.html
mockups/citevahti-evidence-map/: README.md  app.js  data.js  index.html  styles.css
mockups/citevahti-inline/: README.md  app.js  index.html  styles.css
mockups/citevahti-inline-v2/: app.js  index.html  styles.css
mockups/citevahti-ui/: README.md  app.js  index.html  styles.css
scripts/: final_smoke.sh
site/: index.html  llms.txt  make_og.py
skills/: README.md
skills/citevahti-claims/: SKILL.md
skills/citevahti-dev/: SKILL.md  citevahti-commands.md
skills/citevahti-eval/: SKILL.md
skills/citevahti-models/: SKILL.md
skills/citevahti-onboarding/: SKILL.md
skills/citevahti-release/: SKILL.md
skills/citevahti-report/: SKILL.md
skills/citevahti-review/: SKILL.md
skills/citevahti-screen/: SKILL.md
skills/citevahti-support/: SKILL.md
skills/citevahti-writing/: SKILL.md  citevahti-writing-reference.md
src/citevahti/: __init__.py  __main__.py  applog.py  appprefs.py  atlas.py  capabilities.py  cite.py  cli.py  credentials.py  crossref.py  demo.py  desktop.py  engine.py  findings.py  onboarding.py  openalex.py  parentwatch.py  paths.py  rootcfg.py  runtime_state.py  semscholar.py  start.py  supervisor.py  tools.py  update_check.py  util.py  warehouse.py  workflow.py  writing.py
src/citevahti/agent/: __init__.py  annotations.py  mcp_server.py  policy.py  prompts.py  tools.py
src/citevahti/assess/: __init__.py  service.py
src/citevahti/autoupdate/: __init__.py  client.py  maintainer.py  settings.py
src/citevahti/bbt/: __init__.py  client.py
src/citevahti/bibsync/: __init__.py  extract.py  provider.py  service.py
src/citevahti/bootstrap/: __init__.py  service.py
src/citevahti/claimcheck/: __init__.py  service.py
src/citevahti/claims/: __init__.py  ai.py  bonds.py  candidates.py  decisions.py  panel.py  service.py  support.py
src/citevahti/cli/: __init__.py  __main__.py  _util.py  commands.py
src/citevahti/corpus/: __init__.py  diff.py  snapshot.py  source.py
src/citevahti/evidence/: __init__.py  map_ops.py
src/citevahti/export/: __init__.py  agreement.py  evidence.py  kappa.py
tests/: conftest.py  test_agent_init.py  test_agent_surface.py  test_agent_write_boundary.py  test_agreement_report.py  test_ai_rater.py  test_applog.py  test_appprefs.py  test_assess.py  test_atlas_contribution.py  test_audit_chain.py  test_audit_lock.py  test_autoupdate.py  test_bibsync.py  test_blinding_deterministic.py  test_capabilities.py  test_certainty_overclaim.py  test_check_paragraph.py  test_citation_export.py  test_cite.py  test_claim_bonds.py  test_claim_candidates.py  test_claim_check.py  test_claim_entity.py  test_claim_normalization.py  test_claim_report.py  test_claim_revision.py  test_claim_support.py  test_claim_test_report.py  test_claimcheck_polarity.py  test_cli_commands_stable.py  test_cli_json.py  test_cli_orchestration.py  test_cli_read_commands_smoke.py  test_cli_smoke_characterization.py  test_config_validators.py  test_corpus_diff.py  test_credentials.py  test_decision_tamper_integrity.py  test_dedupe_zotero_index.py  (+92 more)
tests/panel_js/: nav_test.js
validation/: eval_report.py
validation/claimcheck/: README.md  acceptance-thresholds.md  build_ledger.py  eval_lexicon.py  fill_ledger.py  ledger.demo.jsonl  ledger.jsonl  lexicon_baseline.json  lexicon_cases.jsonl  make_demo_ledger.py  score_ledger.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+153 files in other folders)
