[project]
# Distribution name, importable package, and CLI are all `citevahti`
# (product brand, a product of Vahtian). The earlier `zotsynth` package
# alias and CLI shims were retired in the full rename.
name = "citevahti"
version = "0.16.0"
description = "CiteVahti — citation-integrity and provenance for research synthesis: a blinded human->AI->adjudication dual-rating workflow with decision-gated, undoable Zotero write-back (single-user, local-first; searches PubMed, OpenAlex, Semantic Scholar, Crossref)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
authors = [{ name = "Vahtian" }]
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/heidihelena/citevahti#readme"
Repository = "https://github.com/heidihelena/citevahti"
Issues = "https://github.com/heidihelena/citevahti/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.27.2"]
dev = ["pytest>=9.1.0"]
keyring = ["keyring>=24"]   # OS-native secret store for onboarding (system_keyring backend)

[project.scripts]
citevahti = "citevahti.cli:main"
citevahti-mcp = "citevahti.agent.mcp_server:main"
citevahti-panel = "citevahti.panel.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citevahti"]
# the side-panel static assets (html/js/css) ship inside the package
artifacts = ["src/citevahti/panel/web/*"]

# Scope the sdist too — without this, hatchling sweeps the whole repo into the
# tarball (vscode-extension/node_modules, the .vsix, build dirs → ~23 MB). Keep
# it to the package + the metadata PyPI renders.
[tool.hatch.build.targets.sdist]
include = ["/src/citevahti", "/README.md", "/LICENSE", "/NOTICE", "/CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
