[project]
# Distribution name, importable package, and CLI are all `citevahti`
# (product brand, a product of Vahtian). The earlier `zotsynth` package
# alias and CLI shims were retired in the full rename.
name = "citevahti"
version = "0.21.3"
description = "CiteVahti — citation-integrity and provenance for research synthesis: a blinded human->AI->adjudication dual-rating workflow with decision-gated, undoable Zotero write-back (single-user, local-first; searches PubMed, OpenAlex, Semantic Scholar, Crossref)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
authors = [{ name = "Vahtian" }]
dependencies = [
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    # small pure-Python wrapper; the ~100MB Pandoc binary is fetched on first Word
    # export (no-terminal "first-run fetch"), never bundled. See report/citation_export.
    "pypandoc>=1.13",
    # Word import (.docx -> Markdown) + the integrity-report .docx. Core (not an
    # extra) so these work in the no-terminal .mcpb, which can't `pip install`.
    "python-docx>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/heidihelena/citevahti#readme"
Repository = "https://github.com/heidihelena/citevahti"
Issues = "https://github.com/heidihelena/citevahti/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.27.2"]
dev = ["pytest>=9.1.0"]
keyring = ["keyring>=25.7.0"]   # OS-native secret store for onboarding (system_keyring backend)
timestamp = ["asn1crypto>=1.5.1"]   # RFC 3161 timestamping of the audit head (issue #42); opt-in
docx = []   # back-compat alias: python-docx is now a core dependency (Word features ship by default)

[project.scripts]
citevahti = "citevahti.cli:main"
citevahti-mcp = "citevahti.agent.mcp_server:main"
citevahti-panel = "citevahti.panel.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citevahti"]
# the side-panel static assets (html/js/css) ship inside the package
artifacts = ["src/citevahti/panel/web/*"]

# Scope the sdist too — without this, hatchling sweeps the whole repo into the
# tarball (vscode-extension/node_modules, the .vsix, build dirs → ~23 MB). Keep
# it to the package + the metadata PyPI renders.
[tool.hatch.build.targets.sdist]
include = ["/src/citevahti", "/README.md", "/LICENSE", "/NOTICE", "/CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
