[project]
# Distribution name, importable package, and CLI are all `citevahti`
# (product brand, a product of Vahtian). The earlier `zotsynth` package
# alias and CLI shims were retired in the full rename.
name = "citevahti"
version = "0.44.0"
description = "CiteVahti — citation-integrity and provenance for research synthesis: a blinded human->AI->adjudication dual-rating workflow with decision-gated, undoable Zotero write-back (single-user, local-first; searches PubMed, OpenAlex, Semantic Scholar, Crossref)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
authors = [{ name = "Vahtian" }]
dependencies = [
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    # small pure-Python wrapper; the ~100MB Pandoc binary is fetched on first Word
    # export (no-terminal "first-run fetch"), never bundled. See report/citation_export.
    "pypandoc>=1.13",
    # Word import (.docx -> Markdown) + the integrity-report .docx. Core (not an
    # extra) so these work in the no-terminal .mcpb, which can't `pip install`.
    "python-docx>=1.1.0",
    # Hardened XML parsing for PubMed efetch (entity-expansion/XXE). Core (not an
    # extra), like python-docx, so the no-terminal .mcpb — which can't `pip install`
    # — parses PubMed safely. Tiny pure-Python wheel (~25 KB), no transitive deps.
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/heidihelena/citevahti#readme"
Repository = "https://github.com/heidihelena/citevahti"
Issues = "https://github.com/heidihelena/citevahti/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.27.2"]
app = ["pywebview>=5.0"]   # native desktop window (OS webview) for the panel — `citevahti-app`
update = ["tufup>=0.9"]   # signed auto-updates for the frozen desktop app (TUF); see docs/AUTO_UPDATE.md
dev = ["pytest>=9.1.0", "ruff>=0.15", "mypy>=1.18", "types-defusedxml>=0.7"]   # stubs: defusedxml ships no py.typed
keyring = ["keyring>=25.7.0"]   # OS-native secret store for onboarding (system_keyring backend)
timestamp = ["asn1crypto>=1.5.1"]   # RFC 3161 timestamping of the audit head (issue #42); opt-in
docx = []   # back-compat alias: python-docx is now a core dependency (Word features ship by default)

[project.scripts]
citevahti = "citevahti.cli:main"
citevahti-mcp = "citevahti.agent.mcp_server:main"
citevahti-panel = "citevahti.panel.server:main"
citevahti-app = "citevahti.desktop:main"
citevahti-engine = "citevahti.engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citevahti"]
# the side-panel static assets (html/js/css) ship inside the package
artifacts = ["src/citevahti/panel/web/*"]

# Scope the sdist too — without this, hatchling sweeps the whole repo into the
# tarball (vscode-extension/node_modules, the .vsix, build dirs → ~23 MB). Keep
# it to the package + the metadata PyPI renders.
[tool.hatch.build.targets.sdist]
include = ["/src/citevahti", "/README.md", "/LICENSE", "/NOTICE", "/CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
# Security-control regression group. Run just these with `pytest -m security`.
# These guard the local trust boundary (loopback CSRF, constrained agent surface,
# decision-tamper integrity, read-only-views-never-mutate). See docs/SECURITY.md.
markers = [
  "security: security-control regression tests for the local trust boundary",
]

[tool.ruff]
target-version = "py310"   # matches requires-python = ">=3.10"
src = ["src"]
extend-exclude = ["vscode-extension"]   # Node land; linted by its own tooling

[tool.ruff.lint]
# E/F = pyflakes + pycodestyle (correctness/dead-code); S = flake8-bandit (security).
# S is deliberately on: CiteVahti is security-critical, so a security regression
# should fail CI the same as a syntax error.
select = ["E", "F", "S"]
ignore = [
  # Line length is a formatter concern, not a correctness gate — enforcing it would
  # reflow ~1500 pre-existing lines (huge diff, no safety value). Left to ruff format.
  "E501",   # line too long
  # Pre-existing, cosmetic; renaming touches logic so it's deferred to its own pass.
  "E741",   # ambiguous variable name (l/I/O)
  # Robustness lints with a high false-positive rate here — most sites are
  # intentional best-effort cleanup. A dedicated "do we swallow errors we
  # shouldn't?" audit is tracked separately, not blanket-suppressed inline.
  "S110",   # try-except-pass
  "S112",   # try-except-continue
]

[tool.ruff.lint.per-file-ignores]
# Tests assert by design, spin up loopback servers, and bind to localhost.
"tests/**" = ["S101", "S104", "S105", "S106", "S311"]

[tool.mypy]
# The whole package is type-checked and gating — all 162 files. (The gradual-
# adoption ignore_errors backlog has been fully worked off, module by module.)
python_version = "3.10"
plugins = ["pydantic.mypy"]   # pydantic v2 model awareness
mypy_path = "src"
files = ["src/citevahti"]
namespace_packages = true
explicit_package_bases = true
# Untyped function bodies aren't checked during gradual adoption, so silence the
# per-line "consider --check-untyped-defs" notes (tightening this is a later step).
disable_error_code = ["annotation-unchecked"]

# Optional/untyped third-party deps with no stubs or py.typed marker.
[[tool.mypy.overrides]]
module = ["tufup.*", "pypandoc.*", "asn1crypto.*", "keyring.*", "mcp.*", "Foundation.*",
          "AppKit.*", "objc.*"]
ignore_missing_imports = true
